# EwaVM

./: CMakeLists.txt  README.md
.workflow/: MainScan.yml
EwaVM/: core.cpp  modparser.cpp
EwaVM/core/: allocator.cpp  bytes.cpp  dynarr.cpp  namespace.cpp  pool.cpp  std.cpp
EwaVM/include/: core.h  def.h  ewavm.h  opgen.h
EwaVM/include/internal/: core.h  def.h  opgen.h
EwaVM/opgen/: extfunc.cpp  opgen.cpp  opgen_ctl.cpp  opgen_mem.cpp  opgen_misc.cpp  opgen_num.cpp  opgen_utils.cpp
cli/: main.cpp
ewasvm/: core.cpp  modparser.cpp
ewasvm/core/: allocator.cpp  bytes.cpp  dynarr.cpp  namespace.cpp  pool.cpp  std.cpp
ewasvm/include/: core.h  def.h  opgen.h  wasvm.h
ewasvm/opgen/: extfunc.cpp  opgen.cpp  opgen_ctl.cpp  opgen_mem.cpp  opgen_misc.cpp  opgen_num.cpp  opgen_utils.cpp
